bug fix: page stretching due to timepicker, some presentation and variable changes.

--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -8,3 +8,7 @@ body{
 .react-time-picker__wrapper{
   border:0px none;
 }
+/* fixes bug with page stretching on mobile because of timepicker */
+#root{
+  overflow-x: hidden;
+}
